# simplevectors

./: .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  README.rst  a00023.html  a00023_source.html  a00025.map  a00025.md5  a00026.html  a00026_source.html  a00027.map  a00027.md5  a00028.map  a00028.md5  a00029.html  a00029_source.html  a00030.map  a00030.md5  a00031.map  a00031.md5  a00032.html  a00032_source.html  a00033.map  a00033.md5  a00034.map  a00034.md5  a00035.html  a00035_source.html  a00036.map  a00036.md5  a00038.html  a00038_source.html  a00039.map  a00039.md5  (+78 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-fix.md  feature_request.md  other.md
.github/workflows/: doc.yml  test.yml
doc/: CMakeLists.txt  basic_usage.md  embedding.md  extending.md  index.md  installation.md
docs/: requirements.txt
docs/source/: basic_usage.rst  conf.py  embedding.rst  extending.rst  index.rst  installation.rst
docs/source/api/: class_view_hierarchy.rst.include  classsvector_1_1_vector.rst  classsvector_1_1_vector2_d.rst  classsvector_1_1_vector3_d.rst  dir_include.rst  dir_include_simplevectors.rst  dir_include_simplevectors_core.rst  enum_units_8hpp_1a0bce35f558c2b5bf5b39d311bc00aa1c.rst  file_include_simplevectors_core_units.hpp.rst  file_include_simplevectors_core_vector.hpp.rst  file_include_simplevectors_core_vector2d.hpp.rst  file_include_simplevectors_core_vector3d.hpp.rst  file_include_simplevectors_embed.h.rst  file_include_simplevectors_embed.hpp.rst  file_include_simplevectors_functions.hpp.rst  file_include_simplevectors_vectors.hpp.rst  file_view_hierarchy.rst.include  function_embed_8h_1a0c1e28f4dbda25c6279bb1bc7cda8946.rst  function_embed_8h_1a12541a5eec50a4e2bde06b7aea85bd51.rst  function_embed_8h_1a24b1732513a4c2833dfb8a4a82859b80.rst  function_embed_8h_1a24ecb71b23bde2c44b254116dcefb507.rst  function_embed_8h_1a3ea11bcea0e6deea2b9bb1df947fe7cf.rst  function_embed_8h_1a40d049f8b255b5584c8b6d426c801eb2.rst  function_embed_8h_1a4106dfed6e173169dfebc50fc63534d3.rst  function_embed_8h_1a46bdc3e715b6bb614a7cc449de3299ce.rst  function_embed_8h_1a4a513ba49b5f49d06d3296dec6ff74ff.rst  function_embed_8h_1a4c94480d1c87783deaa8df6bc3a29d17.rst  function_embed_8h_1a4f02bc9182bcfd33b9ed2a9efeb2cd0c.rst  function_embed_8h_1a530e2805ef420e88a401dc5fad489f50.rst  function_embed_8h_1a671a7b129ffbe17cd8f0d90ed0d98cee.rst  function_embed_8h_1a761ae398b7a5bb8c39a59502cbc1ee98.rst  function_embed_8h_1a7a9b9d1f9c5c3aab11db0c74c5cd2d3b.rst  function_embed_8h_1a8505c755fc09e55c856a84edee2d87bc.rst  function_embed_8h_1a88bb1d4f85ea18626a38892483b1646b.rst  function_embed_8h_1a8b1154e2c3d7d1cbdfcdfacaf9937a0c.rst  function_embed_8h_1a970dd6eb87b61c3f70027a5ba6202817.rst  function_embed_8h_1a9c56351aac3615338001626caeebc520.rst  function_embed_8h_1aa8d5fc51676fcf3eb4076dac40aff63d.rst  function_embed_8h_1aac6916e2f4278a8f586d734199b6670e.rst  function_embed_8h_1abc64f493ed16de7bb229c670b4faa074.rst  (+86 more)
example/: 2d_3d_examples.cpp  4d_vector.cpp  CMakeLists.txt  README.cpp  README_examples.cpp  basic_examples.cpp  complex_example.cpp  em_example.cpp  kinematics_example.cpp
include/: simplevector2d.h  simplevector3d.h  units.h
include/simplevectors/: embed.h  embed.hpp  embed_stl.hpp  functions.hpp  simplevector2d.h  simplevector3d.h  units.h  utils.hpp  vector_min.hpp  vectors.hpp
include/simplevectors/core/: units.hpp  vector.hpp  vector2d.hpp  vector3d.hpp
scripts/: Makefile  combiner.py  tidy.cpp  tidy_class_operators.cpp  tidy_embed.cpp  tidy_embed_no_stl.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+19 more)
src/: simplevector2d.cpp  simplevector3d.cpp
test/: .clang-tidy  CMakeLists.txt  test2d.cpp  test3d.cpp  test_all.cpp  testbase.cpp  testembed.cpp  testembed2.cpp  testexp.cpp  testexpvectormin.cpp  testfunctions.cpp  testutil.cpp
